# polymonad-plugin

./: .gitignore  LICENSE  Makefile  README.md  polymonad-plugin.cabal
examples/core-error/: Main.hs  MinimalPlugin.hs  core-error.cabal  effect-example.cabal
examples/effect/: Main.hs  Main2.hs  Main3.hs  MainPolymonad.hs  MainPolymonad2.hs  MainPolymonad3.hs  effect-example.cabal
examples/plugin-test/: .gitignore  Plugin.hs  Test.hs  plugin-test.cabal
examples/session/: MainPolymonad.hs  example.cabal  session-example.cabal
src/: Main.hs
src/Control/: Polymonad.hs
src/Control/Polymonad/: Functions.hs  Hoare.hs  Plugin.hs  Prelude.hs
src/Control/Polymonad/Plugin/: Ambiguity.hs  Constraint.hs  Core.hs  Debug.hs  Derive.hs  Detect.hs  Environment.hs  Evaluate.hs  Evidence.hs  Graph.hs  GraphView.hs  Instance.hs  Log.hs  PrincipalJoin.hs  Simplification.hs  Solve.hs  Topological.hs  Types.hs  Utils.hs
