name:                polymonad-plugin
version:             0.1
synopsis:            Plugin and base library to support polymonads in Haskell
category:            Type System, Plugin, Monad
description:         Plugin and base library to support polymonads in Haskell
license:             BSD3
license-file:        LICENSE
author:              Jan Bracker <jan.bracker@googlemail.com>
maintainer:          Jan Bracker <jan.bracker@googlemail.com>
bug-reports:         https://bitbucket.org/jbracker/polymonad-plugin
stability:           experimental
copyright:           Copyright (c) 2015, Jan Bracker
build-type:          Simple
cabal-version:       >=1.10
description:

    The @polymonad-plugin@ library adds support for polymonads to GHC
    using typechecker plugins. Plugins are available from GHC 7.10 onwards.
    The base library containing the Haskell representation of polymonads
    is also given by this package.

source-repository head
  type:     git
  location: https://bitbucket.org/jbracker/polymonad-plugin.git

library
  exposed-modules: Control.Polymonad
                 , Control.Polymonad.Plugin
                 , Control.Polymonad.Plugin.Types
                 , Control.Polymonad.Plugin.Utils
  other-modules:       
  other-extensions:    
  build-depends:       base >=4.7 && <5,
                       ghc >= 7.9 && <7.12,
                       containers >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -dynamic

executable polymonad-test
  build-depends:       base >=4.7 && <5,
                       ghc >= 7.9 && <7.12,
                       containers >=0.5 && <0.6
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -dynamic