name:                core-error
version:             0.1
synopsis:            Example
category:
description:         Example
author:              Jan Bracker <jan.bracker@googlemail.com>
maintainer:          Jan Bracker <jan.bracker@googlemail.com>
stability:           experimental
copyright:           Copyright (c) 2015, Jan Bracker
build-type:          Simple
cabal-version:       >=1.10

executable core-error
  build-depends:  base             >= 4.8,
                  effect-monad     == 0.6.1,
                  ghc              >= 7.9 && <7.12,
                  containers       >= 0.5 && <0.6,
                  type-level-sets  == 0.5
  main-is:             Main.hs
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -dynamic -dcore-lint
  -- Version bound of 'type-level-sets' is important for effect-monad to compile
