name:                reproduce-core-error
version:             0.1
synopsis:            Example
category:
description:         Example
author:              Jan Bracker <jan.bracker@googlemail.com>
maintainer:          Jan Bracker <jan.bracker@googlemail.com>
stability:           experimental
copyright:           Copyright (c) 2015, Jan Bracker
build-type:          Simple
cabal-version:       >=1.10

executable core-error
  build-depends:  base             == 4.8.1.0,
                  safe         >=0.3 && <0.4,
                  effect-monad     == 0.6.1,
                  polymonad-plugin == 0.1,
                  ghc          >=7.9 && <7.12,
                  containers   >=0.5 && <0.6,
                  fgl          >=5.5.2 && <5.6,
                  transformers >=0.4 && <0.5
  main-is:             Main.hs
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -dynamic -dcore-lint
