name:                effect-example
version:             0.1
synopsis:            Example
category:
description:         Example
author:              Jan Bracker <jan.bracker@googlemail.com>
maintainer:          Jan Bracker <jan.bracker@googlemail.com>
stability:           experimental
copyright:           Copyright (c) 2015, Jan Bracker
build-type:          Simple
cabal-version:       >=1.10

executable effect-example
  build-depends:  base            == 4.8.1.0,
                  effect-monad    == 0.6.1
  main-is:             Main.hs
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -dcore-lint
                       -fno-warn-unused-binds -fno-warn-unused-matches
                       -fno-warn-name-shadowing

executable effect-example-pm
  build-depends:  base             == 4.8.1.0,
                  effect-monad     == 0.6.1,
                  polymonad-plugin == 0.1
  main-is:             MainPolymonad.hs
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -dynamic -dcore-lint
