name:                plugin-test
version:             0.1
synopsis:            Play around with the plugin.
category:
description:         Play around with the plugin.
author:              Jan Bracker <jan.bracker@googlemail.com>
maintainer:          Jan Bracker <jan.bracker@googlemail.com>
stability:           experimental
copyright:           Copyright (c) 2015, Jan Bracker
build-type:          Simple
cabal-version:       >=1.10

executable plugin-test
  build-depends:  base         >=4.8 && <5,
                  safe         >=0.3 && <0.4,
                  ghc          >=7.9 && <7.12
  main-is:             Test.hs
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -dynamic -Wall -dcore-lint
